change the size of HTML's button

--- a/exercise.html
+++ b/exercise.html
@@ -173,7 +173,7 @@
         type="submit"
         value="SEND"
         onclick="alert('DONE!')"
-        style="display: block"
+        style="display: block; width: 200px"
       />
     </form>
   </body>
