Revert "delete checkbox"
This reverts commit 5810e095730922d2a899d85166ba2c87bb9444cf.

--- a/exercise.html
+++ b/exercise.html
@@ -162,6 +162,11 @@
         style="display: block; width: 300px; margin-bottom: 10px"
       ></textarea>
 
+      <input type="checkbox" id="send_mail" style="margin-bottom: 30px" />
+      <label for="send_mail"
+        >Do you want to update information by send email?
+      </label>
+
       <input
         type="submit"
         value="SEND"
